--- a/index.html
+++ b/index.html
@@ -4,58 +4,40 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Alvin Anonymous Messaging
+   Chatting Website
   </title>
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
-   <link href="style.css"
+  <!-- Custom CSS -->
   <meta content="noindex, nofollow" name="robots"/>
  </head>
  <body>
-  <!-- Header Section -->
-  <header class="bg-dark text-white text-center p-4">
-   <h1>
-    Alvin Anonymous Messaging
-   </h1>
-   <p>
-    Send anonymous messages to link owners
-   </p>
-  </header>
-  <!-- Message Form Section -->
-  <section class="container mt-5" id="message-form">
+  <!-- Chat Container -->
+  <div class="container">
    <div class="row justify-content-center">
     <div class="col-md-6">
-     <h2>
-      Send an Anonymous Message
+     <h2 class="text-center">
+      Chatting Website
      </h2>
-     <form id="anonymousMessageForm">
+     <div id="chat-container">
+      <!-- Messages will be dynamically added here -->
+     </div>
+     <form id="chat-form">
       <div class="form-group">
-       <label for="link">
-        Link:
-       </label>
-       <input class="form-control" id="link" placeholder="Enter link" required="" type="text"/>
+       <input class="form-control" id="message-input" placeholder="Type your message..." required="" type="text"/>
       </div>
-      <div class="form-group">
-       <label for="message">
-        Message:
-       </label>
-       <textarea class="form-control" id="message" placeholder="Enter your message" required=""></textarea>
-      </div>
-      <button class="btn btn-primary w-100" type="submit">
-       Send Message
+      <button class="btn btn-primary" type="submit">
+       Send
       </button>
      </form>
     </div>
    </div>
-  </section>
-  <!-- Footer Section -->
-  <footer class="bg-dark text-white text-center p-4 mt-5">
-   © 2021 Anonymous Messaging. All rights reserved.
-  </footer>
+  </div>
   <!-- Bootstrap & jQuery JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
   </script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
   </script>
+  <!-- Custom JS -->
  </body>
 </html>
